# dramatiq-pg

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  README.rst  docker-compose.yml  example.py  pyproject.toml  pyrightconfig.json
docs/: changelog.rst  deployment-guide.rst  why.rst
dramatiq_pg/: broker.py  cli.py  results.py  schema.sql  utils.py
tests/: conftest.py
tests/func/: conftest.py  docker-compose.yml  entrypoint.sh  schema.sql  test_broker.py  test_cli.py  test_results.py
tests/unit/: test_broker.py  test_utils.py
typings/psycopg2/: __init__.pyi  errors.pyi  extensions.pyi
