[tool.poetry]
name = "dramatiq-pg"
version = "0.11.0"
description = "Postgres Broker for Dramatiq Task Queue"
authors = ["Étienne BERSAC"]
homepage = "https://gitlab.com/dalibo/dramatiq-pg"
documentation = "https://gitlab.com/dalibo/dramatiq-pg/blob/master/docs/index.rst"
license = "PostgreSQL"
readme = "README.md"
keywords = ["postgres", "task queue", "dramatiq"]
include = ["dramatiq-pg/schema.sql"]

[tool.poetry.dependencies]
python = "^3.10"
dramatiq = "^2.0"
tenacity = ">=8,<10"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^6"
pytest-timeout = "^2"
dramatiq = {version = "^2.0",extras = ["watch"]}
sh = "^1.12"
pytest-mock = "^1.10"
psycopg2-binary = "^2.8"
docutils = "^0.15.2"
pygments = "^2.4.2"

[tool.poetry.scripts]
dramatiq-pg = 'dramatiq_pg.cli:entrypoint'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "testcontainers (>=4.14.0,<5.0.0)"
]
